--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   carousel_slider: ^4.2.1
   provider: ^6.0.5
   http: ^1.1.0
+  firebase_core: ^2.19.0
+  cloud_firestore: ^4.11.0
+
+
+
 
 dev_dependencies:
   flutter_test:
